// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`report email rendering is pinned before the reportDelivery extraction (#4248 W03) > csv report 1`] = `
{
  "attachments": [
    {
      "bytes": 81,
      "contentType": "text/csv",
      "filename": "device_inventory-report-2026-07-25.csv",
      "sha256": "b403b7f192d483019c3f3f2ef5d2cbc6a66d642cfd67f94dfc8999682736be3d",
    },
  ],
  "html": "<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <meta name="color-scheme" content="light" />
    <title>Scheduled report</title>
  </head>
  <body style="margin: 0; padding: 0; background: #eef2f7; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif; color: #1f2937;">
    <div style="display: none; max-height: 0; overflow: hidden; mso-hide: all; font-size: 1px; line-height: 1px; color: #eef2f7;">Your scheduled report &quot;Nightly inventory&quot; has been generated with 2 records.</div>
    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background: #eef2f7; padding: 24px 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">
      <tr>
        <td align="center">
          <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width: 600px; width: 100%; background: #ffffff; border-radius: 12px; box-shadow: 0 12px 30px rgba(15, 23, 42, 0.06); overflow: hidden;">
            <tr>
              <td style="height: 3px; background: #155e75; line-height: 3px; font-size: 0;">&nbsp;</td>
            </tr>
            <tr>
              <td style="padding: 28px 32px 4px; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">
                <h1 style="margin: 0; font-size: 20px; line-height: 1.3; color: #0f172a; font-weight: 600; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Scheduled report ready</h1>
              </td>
            </tr>
            <tr>
              <td style="padding: 8px 32px 24px; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif; color: #1f2937; font-size: 15px; line-height: 1.55;">
                <p style="margin: 0px 0 12px; font-size: 15px; line-height: 1.55; color: #1f2937; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Your scheduled report &quot;Nightly inventory&quot; has been generated with 2 records.</p><p style="margin: 0px 0 12px; font-size: 13px; line-height: 1.55; color: #6b7280; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">The data is attached as CSV; open Breeze for the fully formatted report.</p><a href="http://localhost:4321/reports" style="display: inline-block; padding: 12px 22px; border-radius: 8px; background: #155e75; color: #ffffff; font-size: 14px; font-weight: 500; text-decoration: none; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">View in Breeze</a>
              </td>
            </tr>
            
          </table>
          <p style="margin: 16px 0 0; font-size: 12px; color: #94a3b8; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Breeze RMM</p>
        </td>
      </tr>
    </table>
  </body>
</html>",
  "partnerId": "55555555-5555-4555-8555-555555555555",
  "purpose": "report.delivery",
  "subject": "Scheduled report ready: Nightly inventory",
  "text": "Your scheduled report "Nightly inventory" has been generated with 2 records.
The data is attached as CSV; open Breeze for the fully formatted report.
http://localhost:4321/reports",
  "to": [
    "a@example.com",
  ],
}
`;

exports[`report email rendering is pinned before the reportDelivery extraction (#4248 W03) > csv report with a posture trend line 1`] = `
{
  "attachments": [
    {
      "bytes": 81,
      "contentType": "text/csv",
      "filename": "device_inventory-report-2026-07-25.csv",
      "sha256": "b403b7f192d483019c3f3f2ef5d2cbc6a66d642cfd67f94dfc8999682736be3d",
    },
  ],
  "html": "<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <meta name="color-scheme" content="light" />
    <title>Scheduled report</title>
  </head>
  <body style="margin: 0; padding: 0; background: #eef2f7; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif; color: #1f2937;">
    <div style="display: none; max-height: 0; overflow: hidden; mso-hide: all; font-size: 1px; line-height: 1px; color: #eef2f7;">Posture score 79.</div>
    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background: #eef2f7; padding: 24px 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">
      <tr>
        <td align="center">
          <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width: 600px; width: 100%; background: #ffffff; border-radius: 12px; box-shadow: 0 12px 30px rgba(15, 23, 42, 0.06); overflow: hidden;">
            <tr>
              <td style="height: 3px; background: #155e75; line-height: 3px; font-size: 0;">&nbsp;</td>
            </tr>
            <tr>
              <td style="padding: 28px 32px 4px; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">
                <h1 style="margin: 0; font-size: 20px; line-height: 1.3; color: #0f172a; font-weight: 600; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Scheduled report ready</h1>
              </td>
            </tr>
            <tr>
              <td style="padding: 8px 32px 24px; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif; color: #1f2937; font-size: 15px; line-height: 1.55;">
                <p style="margin: 0px 0 12px; font-size: 15px; line-height: 1.55; color: #1f2937; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Your scheduled report &quot;Nightly inventory&quot; has been generated with 2 records.</p><p style="margin: 0px 0 12px; font-size: 15px; line-height: 1.55; color: #1f2937; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Posture score 79.</p><p style="margin: 0px 0 12px; font-size: 13px; line-height: 1.55; color: #6b7280; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">The data is attached as CSV; open Breeze for the fully formatted report.</p><a href="http://localhost:4321/reports" style="display: inline-block; padding: 12px 22px; border-radius: 8px; background: #155e75; color: #ffffff; font-size: 14px; font-weight: 500; text-decoration: none; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">View in Breeze</a>
              </td>
            </tr>
            
          </table>
          <p style="margin: 16px 0 0; font-size: 12px; color: #94a3b8; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Breeze RMM</p>
        </td>
      </tr>
    </table>
  </body>
</html>",
  "partnerId": "55555555-5555-4555-8555-555555555555",
  "purpose": "report.delivery",
  "subject": "Scheduled report ready: Nightly inventory",
  "text": "Your scheduled report "Nightly inventory" has been generated with 2 records.
Posture score 79.
The data is attached as CSV; open Breeze for the fully formatted report.
http://localhost:4321/reports",
  "to": [
    "a@example.com",
    "b@example.com",
  ],
}
`;

exports[`report email rendering is pinned before the reportDelivery extraction (#4248 W03) > failure mail omits the underlying error 1`] = `
{
  "html": "<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <meta name="color-scheme" content="light" />
    <title>Scheduled report failed</title>
  </head>
  <body style="margin: 0; padding: 0; background: #eef2f7; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif; color: #1f2937;">
    <div style="display: none; max-height: 0; overflow: hidden; mso-hide: all; font-size: 1px; line-height: 1px; color: #eef2f7;">Nightly inventory could not be generated</div>
    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background: #eef2f7; padding: 24px 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">
      <tr>
        <td align="center">
          <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width: 600px; width: 100%; background: #ffffff; border-radius: 12px; box-shadow: 0 12px 30px rgba(15, 23, 42, 0.06); overflow: hidden;">
            <tr>
              <td style="height: 3px; background: #155e75; line-height: 3px; font-size: 0;">&nbsp;</td>
            </tr>
            <tr>
              <td style="padding: 28px 32px 4px; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">
                <h1 style="margin: 0; font-size: 20px; line-height: 1.3; color: #0f172a; font-weight: 600; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Scheduled report failed</h1>
              </td>
            </tr>
            <tr>
              <td style="padding: 8px 32px 24px; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif; color: #1f2937; font-size: 15px; line-height: 1.55;">
                <p style="margin: 0px 0 12px; font-size: 15px; line-height: 1.55; color: #1f2937; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">We couldn't generate <strong>Nightly inventory</strong> for its scheduled run. No report was produced.</p><p style="margin: 0px 0 12px; font-size: 15px; line-height: 1.55; color: #1f2937; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Your team can run it manually, or wait for the next scheduled occurrence.</p><a href="http://localhost:4321/reports" style="display: inline-block; padding: 12px 22px; border-radius: 8px; background: #155e75; color: #ffffff; font-size: 14px; font-weight: 500; text-decoration: none; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">View reports</a>
              </td>
            </tr>
            
          </table>
          <p style="margin: 16px 0 0; font-size: 12px; color: #94a3b8; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Breeze RMM</p>
        </td>
      </tr>
    </table>
  </body>
</html>",
  "purpose": "staff.report_failure",
  "subject": "Scheduled report failed: Nightly inventory",
  "to": [
    "a@example.com",
  ],
}
`;

exports[`report email rendering is pinned before the reportDelivery extraction (#4248 W03) > oversize attachment falls back to a link 1`] = `
{
  "attachments": [],
  "html": "<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <meta name="color-scheme" content="light" />
    <title>Scheduled report</title>
  </head>
  <body style="margin: 0; padding: 0; background: #eef2f7; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif; color: #1f2937;">
    <div style="display: none; max-height: 0; overflow: hidden; mso-hide: all; font-size: 1px; line-height: 1px; color: #eef2f7;">Your scheduled report &quot;Nightly inventory&quot; has been generated with 60000 records.</div>
    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background: #eef2f7; padding: 24px 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">
      <tr>
        <td align="center">
          <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width: 600px; width: 100%; background: #ffffff; border-radius: 12px; box-shadow: 0 12px 30px rgba(15, 23, 42, 0.06); overflow: hidden;">
            <tr>
              <td style="height: 3px; background: #155e75; line-height: 3px; font-size: 0;">&nbsp;</td>
            </tr>
            <tr>
              <td style="padding: 28px 32px 4px; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">
                <h1 style="margin: 0; font-size: 20px; line-height: 1.3; color: #0f172a; font-weight: 600; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Scheduled report ready</h1>
              </td>
            </tr>
            <tr>
              <td style="padding: 8px 32px 24px; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif; color: #1f2937; font-size: 15px; line-height: 1.55;">
                <p style="margin: 0px 0 12px; font-size: 15px; line-height: 1.55; color: #1f2937; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Your scheduled report &quot;Nightly inventory&quot; has been generated with 60000 records.</p><p style="margin: 0px 0 12px; font-size: 13px; line-height: 1.55; color: #6b7280; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Open Breeze to view and download the formatted report.</p><a href="http://localhost:4321/reports" style="display: inline-block; padding: 12px 22px; border-radius: 8px; background: #155e75; color: #ffffff; font-size: 14px; font-weight: 500; text-decoration: none; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">View in Breeze</a>
              </td>
            </tr>
            
          </table>
          <p style="margin: 16px 0 0; font-size: 12px; color: #94a3b8; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Breeze RMM</p>
        </td>
      </tr>
    </table>
  </body>
</html>",
  "partnerId": "55555555-5555-4555-8555-555555555555",
  "purpose": "report.delivery",
  "subject": "Scheduled report ready: Nightly inventory",
  "text": "Your scheduled report "Nightly inventory" has been generated with 60000 records.
Open Breeze to view and download the formatted report.
http://localhost:4321/reports",
  "to": [
    "a@example.com",
  ],
}
`;

exports[`report email rendering is pinned before the reportDelivery extraction (#4248 W03) > pdf render failure falls back to link-only without throwing 1`] = `
{
  "attachments": [],
  "html": "<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <meta name="color-scheme" content="light" />
    <title>Scheduled report</title>
  </head>
  <body style="margin: 0; padding: 0; background: #eef2f7; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif; color: #1f2937;">
    <div style="display: none; max-height: 0; overflow: hidden; mso-hide: all; font-size: 1px; line-height: 1px; color: #eef2f7;">Your scheduled report &quot;Nightly inventory&quot; has been generated with 2 records.</div>
    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background: #eef2f7; padding: 24px 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">
      <tr>
        <td align="center">
          <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width: 600px; width: 100%; background: #ffffff; border-radius: 12px; box-shadow: 0 12px 30px rgba(15, 23, 42, 0.06); overflow: hidden;">
            <tr>
              <td style="height: 3px; background: #155e75; line-height: 3px; font-size: 0;">&nbsp;</td>
            </tr>
            <tr>
              <td style="padding: 28px 32px 4px; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">
                <h1 style="margin: 0; font-size: 20px; line-height: 1.3; color: #0f172a; font-weight: 600; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Scheduled report ready</h1>
              </td>
            </tr>
            <tr>
              <td style="padding: 8px 32px 24px; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif; color: #1f2937; font-size: 15px; line-height: 1.55;">
                <p style="margin: 0px 0 12px; font-size: 15px; line-height: 1.55; color: #1f2937; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Your scheduled report &quot;Nightly inventory&quot; has been generated with 2 records.</p><p style="margin: 0px 0 12px; font-size: 13px; line-height: 1.55; color: #6b7280; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Open Breeze to view and download the formatted report.</p><a href="http://localhost:4321/reports" style="display: inline-block; padding: 12px 22px; border-radius: 8px; background: #155e75; color: #ffffff; font-size: 14px; font-weight: 500; text-decoration: none; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">View in Breeze</a>
              </td>
            </tr>
            
          </table>
          <p style="margin: 16px 0 0; font-size: 12px; color: #94a3b8; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Breeze RMM</p>
        </td>
      </tr>
    </table>
  </body>
</html>",
  "partnerId": "55555555-5555-4555-8555-555555555555",
  "purpose": "report.delivery",
  "subject": "Scheduled report ready: Nightly inventory",
  "text": "Your scheduled report "Nightly inventory" has been generated with 2 records.
Open Breeze to view and download the formatted report.
http://localhost:4321/reports",
  "to": [
    "a@example.com",
  ],
}
`;

exports[`report email rendering is pinned before the reportDelivery extraction (#4248 W03) > pdf report with a small attachment 1`] = `
{
  "attachments": [
    {
      "contentType": "application/pdf",
      "filename": "device_inventory-report-2026-07-25.pdf",
    },
  ],
  "html": "<!doctype html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <meta name="color-scheme" content="light" />
    <title>Scheduled report</title>
  </head>
  <body style="margin: 0; padding: 0; background: #eef2f7; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif; color: #1f2937;">
    <div style="display: none; max-height: 0; overflow: hidden; mso-hide: all; font-size: 1px; line-height: 1px; color: #eef2f7;">Your scheduled report &quot;Nightly inventory&quot; has been generated with 2 records.</div>
    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background: #eef2f7; padding: 24px 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">
      <tr>
        <td align="center">
          <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width: 600px; width: 100%; background: #ffffff; border-radius: 12px; box-shadow: 0 12px 30px rgba(15, 23, 42, 0.06); overflow: hidden;">
            <tr>
              <td style="height: 3px; background: #155e75; line-height: 3px; font-size: 0;">&nbsp;</td>
            </tr>
            <tr>
              <td style="padding: 28px 32px 4px; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">
                <h1 style="margin: 0; font-size: 20px; line-height: 1.3; color: #0f172a; font-weight: 600; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Scheduled report ready</h1>
              </td>
            </tr>
            <tr>
              <td style="padding: 8px 32px 24px; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif; color: #1f2937; font-size: 15px; line-height: 1.55;">
                <p style="margin: 0px 0 12px; font-size: 15px; line-height: 1.55; color: #1f2937; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Your scheduled report &quot;Nightly inventory&quot; has been generated with 2 records.</p><p style="margin: 0px 0 12px; font-size: 13px; line-height: 1.55; color: #6b7280; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">The formatted report is attached as a PDF.</p><a href="http://localhost:4321/reports" style="display: inline-block; padding: 12px 22px; border-radius: 8px; background: #155e75; color: #ffffff; font-size: 14px; font-weight: 500; text-decoration: none; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">View in Breeze</a>
              </td>
            </tr>
            
          </table>
          <p style="margin: 16px 0 0; font-size: 12px; color: #94a3b8; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;">Breeze RMM</p>
        </td>
      </tr>
    </table>
  </body>
</html>",
  "partnerId": "55555555-5555-4555-8555-555555555555",
  "purpose": "report.delivery",
  "subject": "Scheduled report ready: Nightly inventory",
  "text": "Your scheduled report "Nightly inventory" has been generated with 2 records.
The formatted report is attached as a PDF.
http://localhost:4321/reports",
  "to": [
    "a@example.com",
  ],
}
`;
